# scylladb-basic-demo-rs

./: Cargo.toml  README.md  docker-compose.yml  init.cql  init.sh
src/: main.rs
