[package]
name = "scylladb-basic-demo-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.20.1", features = ["full"] }
uuid = { version = "1.4.1", features = ["serde"] }
anyhow = { version = "1.0.44", features = [] }
dotenv = "0.15.0"
scylla = "0.10.1"
